--- a/style.css
+++ b/style.css
@@ -4,17 +4,23 @@
   box-sizing: border-box;
 }
 
+.container {
+  width: 1024px;
+  margin: 0 auto;
+}
+
 header {
   width: 100%;
   height: 70px;
   background-color: #EC715F;
 }
 
-nav {
-  width: 1024px;
-  margin: 0 auto;
+.logo {
+  height: 70px;
+}
+
+.header-group {
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -24,10 +30,12 @@ ul {
 }
 
 li {
+  width: 120px;
   line-height: 70px;
   padding: 0 30px;
   font-size: 16px;
   color: #FAFAFA;
+  list-style: none;
 }
 
 .main-visual {
@@ -60,15 +68,15 @@ h1 {
 }
 
 .portfolio-main {
-  width: 920px;
+ 
   margin: 0 auto;
+
 }
 
 .heading {
   font-size: 32px;
   color: #000000;
   padding-top: 90px;
-  display: inline-block;
   position: relative;
 }
 
@@ -84,13 +92,15 @@ h1 {
 .heading-text {
   font-size: 16px;
   color: #000000;
-  margin: 30px 0;
+  padding-top: 30px;
 }
 
 .pic-box {
+  width: 920px;
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 90px;
+  padding: 30px 0 90px 0;
+  margin: 0 auto;
 }
 
 
@@ -151,6 +161,7 @@ h1 {
 }
 
 .feature-main {
+  width: 980px;
   text-align: center;
   margin: 0 auto;
 }
@@ -159,7 +170,7 @@ h1 {
   display: flex;
   margin: 0 auto;
   justify-content: center;
-  padding-bottom: 90px;
+  padding: 30px 0 90px 0;
 }
 
 .strength {
@@ -185,6 +196,7 @@ h1 {
 .strength-text {
   font-size: 16px;
   color: #000000;
+  text-align: left;
 }
 
 .profile {
@@ -200,6 +212,7 @@ h1 {
 
 .profile-container {
   display: flex;
+  padding: 30px 0 90px 0;
 }
 
 .profile-icon {
@@ -239,6 +252,7 @@ h1 {
 
 .contact-container {
   display: flex;
+  padding: 30px 0 90px 0;
 }
 
 .left-content {
@@ -253,8 +267,14 @@ h1 {
 
 .description-title {
   font-size: 20px;
+  margin-top: 20px;
   margin-bottom: 5px;
 }
+
+.description-title:nth-child(1) {
+   margin-top: 0;
+}
+
 
 .description-text {
   font-size: 16px;
@@ -270,8 +290,145 @@ h1 {
   margin: 0 auto;
 }
 
+.show-title {
+  margin-bottom: 5px;
+}
+
 .sns {
+  display: inline-block;
   font-size: 50px;
   margin-right: 20px;
 }
 
+.sns:last-child(3) {
+  margin-right: 0;
+}
+
+footer {
+  width: 100%;
+  height: 60px;
+  background-color: #EC715F;
+  text-align: center;
+}
+
+.footer-text {
+  font-size: 16px;
+  color: #FAFAFA;
+  line-height: 60px;
+}
+
+@media screen and (max-width:768px) {
+  
+  .container {
+    width: 90%;
+  }
+  
+  header {
+    height: 50px;
+  }
+  
+  .logo {
+    height: 50px;
+  }
+  
+  .menu-box {
+    width: 40px;
+    height: 40px;
+    margin-right: 5%;
+    border: 1px solid #FAFAFA;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: auto;
+  }
+  
+  .list-bar {
+    display: block;
+    width: 25px;
+    height: 2px;
+    margin: 5px auto;
+    background-color: #FAFAFA;
+  }
+  
+  .list-bar:first-child {
+      margin-top: 10px;
+  }
+  
+  nav {
+    display:none
+  }
+  
+  .main-visual {
+    background-image: url(img/code.png)
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+  
+  .main-visual-text {
+    font-size: 18px;
+  }
+  
+ .pic-box {
+    width: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 30px 0 90px 0;
+    margin: 0 auto;
+  }
+ 
+  .pic:nth-child(1) {
+    display:none
+  }
+   
+  .pic:nth-child(2) {
+    margin: 0 0 10px 0;
+  } 
+  
+ .pic:nth-child(3) {
+    display:none
+  }
+  
+  .pic:nth-child(4) {
+    margin: 0 0 10px 0;
+  } 
+ 
+ .pic:nth-child(5) {
+    display:none
+  }
+  
+  .pic:nth-child(6) {
+    margin: 0 0 10px 0;
+  } 
+  
+  .strength-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .strength {
+    margin-top: 10px;
+  }
+  
+  .profile-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .profile-title, .profile-text {
+    text-align: center;
+  }
+  
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .left-contact-content, .right-contact-content {
+    text-align: center;
+  }
+  
+}
